--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@electron-forge/plugin-fuses": "^7.9.0",
     "@electron-forge/plugin-webpack": "^7.9.0",
     "@electron/fuses": "^1.8.0",
+    "@types/electron": "^1.4.38",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
     "@vercel/webpack-asset-relocator-loader": "^1.10.0",
